esbuild is working

--- a/hello-world/package.json
+++ b/hello-world/package.json
@@ -2,19 +2,24 @@
     "name": "hello-world",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "keywords": [],
+    "license": "ISC",
+    "author": "",
+    "type": "module",
+    "module": "src/spin.ts",
     "scripts": {
         "webpack": "npx mkdirp dist/webpack && npx webpack --mode=production",
+        "esbuild": "npx mkdirp dist/esbuild && node esbuild.mjs",
         "componentize-webpack": "jco componentize dist/webpack/index.js --wit .wit -n spin-http -o dist/webpack/hello-world.wasm",
+        "componentize-esbuild": "jco componentize dist/esbuild/index.js --wit .wit -n spin-http -o dist/esbuild/hello-world.wasm",
         "build-webpack": "run-s webpack componentize-webpack",
+        "build-esbuild": "run-s esbuild componentize-esbuild",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
     "devDependencies": {
         "@bytecodealliance/componentize-js": "^0.8.3",
         "@bytecodealliance/jco": "^1.1.1",
+        "esbuild": "0.20.2",
         "mkdirp": "^3.0.1",
         "npm-run-all": "^4.1.5",
         "ts-loader": "^9.4.1",
